--- a/GSTInvoiceHelper/GSTInvoiceHelper/appsettings.json
+++ b/GSTInvoiceHelper/GSTInvoiceHelper/appsettings.json
@@ -7,5 +7,8 @@
   "EinvoiceAuthAction": "ACCESSTOKEN",
   "EinvoiceAuthUsername": "perennialsystems",
   "EinvoiceAuthPassword": "p3r3nn!@1",
-  "EinvoiceAuthenticateUrl": "https://35.154.208.8/einvoice/v1.03/authentication"
+  "EinvoiceAuthenticateUrl": "http://35.154.208.8:8080/einvoice/v1.03/authentication",
+  "GSTIN": "29AFQPB8708K000",
+  "BasicAuthHeader": "Basic dGVzdGVycGNsaWVudDpBZG1pbkAxMjM="
+
 }
