--- a/GSTInvoiceHelper/GSTInvoiceHelper/appsettings.json
+++ b/GSTInvoiceHelper/GSTInvoiceHelper/appsettings.json
@@ -9,6 +9,8 @@
   "EinvoiceAuthPassword": "p3r3nn!@1",
   "EinvoiceAuthenticateUrl": "http://35.154.208.8:8080/einvoice/v1.03/authentication",
   "GSTIN": "29AFQPB8708K000",
-  "BasicAuthHeader": "Basic dGVzdGVycGNsaWVudDpBZG1pbkAxMjM="
+  "BasicAuthHeader": "Basic dGVzdGVycGNsaWVudDpBZG1pbkAxMjM=",
+  "EinvoiceXConnectorToken": "l7xxba7aa16e968646b992298b377e955e7c:20180519134451:27GSPMH2101G1Z2",
+  "EinvoiceIrnUrl": "http://35.154.208.8:8080/einvoice/v1.03/invoice"
 
 }
