6th commit- bug fixes

--- a/GSTInvoiceHelper/GSTInvoiceHelper/appsettings.json
+++ b/GSTInvoiceHelper/GSTInvoiceHelper/appsettings.json
@@ -11,6 +11,8 @@
   "GSTIN": "29AFQPB8708K000",
   "BasicAuthHeader": "Basic dGVzdGVycGNsaWVudDpBZG1pbkAxMjM=",
   "EinvoiceXConnectorToken": "l7xxba7aa16e968646b992298b377e955e7c:20180519134451:27GSPMH2101G1Z2",
-  "EinvoiceIrnUrl": "http://35.154.208.8:8080/einvoice/v1.03/invoice"
+  "EinvoiceIrnUrl": "http://35.154.208.8:8080/einvoice/v1.03/invoice",
+  "EinvoiceGenerateAction": "GENERATEIRN",
+  "EinvoiceXConnectorTokenForGenerate": "l7xxba7aa16e968646b992298b377e955e7c:20180519134451:29AFQPB8708K000"
 
 }
